spacing ui fixes

--- a/ui.frontend/src/main/webpack/etisalat/styles/edc-tabs.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/edc-tabs.scss
@@ -1,9 +1,11 @@
 .edc-tabs-wrapper {
     position: relative;
-   // .tabs-title {
-    //  z-index: 2;
-    //  text-transform: uppercase;
-    //}
+   .tabs-title {
+     padding-left:2rem;
+     @include respond-to-min($desktop){
+       padding-left: 3rem;
+     }
+    }
   .swiper-container{
     padding: 0;
   }
@@ -95,6 +97,7 @@
       @include respond-to-min($desktop) {
       min-height: 68px;
       max-height: 68px;
+      padding: 0 2rem;
       .page-nav {
         .swiper-slide,
         li {
@@ -110,8 +113,41 @@
       }
     }
   }
+  //tab-panel content
+  
 }
- 
+.basicpage .container .media-cta-wrapper{
+  @include respond-to-max($tablet){
+    padding:0 1rem;
+  }
+}
+
+.media-cta-wrapper{
+  display:inherit;
+    flex-direction: inherit;
+@include respond-to-max($tablet){
+  .aem-Grid {
+    display:inherit;
+    flex-direction: inherit;
+  }
+}
+.font--xsmall{
+  letter-spacing: 4px;
+}
+
+
+  #text-12e1b49a77{
+    padding:1rem 1rem 4rem;
+    @include respond-to-min($desktop){
+      padding: 1.5rem 4rem 2.5rem 24px;
+    }
+    
+  }
+  p+p{
+    margin-top: .55rem;
+  }
+
+}
   
   //arabic
   *[lang="ar"] {
@@ -207,9 +243,9 @@
         @include respond-to-min($tablet){
           min-height: 90px;
         }
-          padding: 0 1rem;
+          padding: 0 1rem 10px;
           font-size: $font12;
-          padding-bottom: 10px;
+          margin-right: 1.5rem;
           color: $almost-black;
           cursor: pointer;
           letter-spacing: 0.25px;
@@ -218,6 +254,7 @@
          @include respond-to-min($desktop){
             padding: 0 1.5rem;
             line-height: 90px;
+            margin-right:1.5rem;
             height: 90px;
             @include font-family-Neotech;
             font-size: $font20;
@@ -274,26 +311,7 @@
       padding-right: 1.4rem;
   }
   }
-  //tab-panel content
   
-    .media-cta-wrapper{
-      display:inherit;
-        flex-direction: inherit;
-    @include respond-to-max($tablet){
-      .aem-Grid {
-        display:inherit;
-        flex-direction: inherit;
-      }
-    }
-
-      .cmp-text{
-        padding-left: 24px;
-      }
-      p+p{
-        margin-top: 0;
-      }
-
-    }
   
   //tab panel with carosal
   .cmp-tabs__tabpanel{
